--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "face-api.js": "^0.22.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
     "react": "^18.3.1",
